fix sticky toolbar on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
 }
