--- a/src/pages/Entry/Entry.module.css
+++ b/src/pages/Entry/Entry.module.css
@@ -2,6 +2,4 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  /* for sticky toolbar to work on mobile with virtual keyboard on */
-  height: 100dvh;
 }
